[package]
name = "ril"
authors = ["jay3332"]
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "Rust Imaging Library: A performant and high-level image processing crate for Rust"
repository = "https://github.com/jay3332/ril"
homepage = "https://github.com/jay3332/ril"
readme = "README.md"
keywords = ["ril", "imaging", "image", "processing", "editing"]
categories = ["encoding", "graphics", "multimedia", "visualization"]

[dependencies]
fast_image_resize = "^1"
png = "^0.17"
jpeg-decoder = "^0.2"
jpeg-encoder = { version = "^0.5", features = ["simd"] }
gif = "^0.11"

[dev-dependencies]
criterion = "^0.3"
image = "*"

[[bench]]
path = "benches/invert.rs"
name = "invert"
harness = false

[[bench]]
path = "benches/invert_comparison.rs"
name = "comparison"
harness = false
