[package]
name = "ril"
authors = ["jay3332"]
version = "0.2.1"
license = "MIT"
edition = "2021"
description = "Rust Imaging Library: A performant and high-level image processing crate for Rust"
repository = "https://github.com/jay3332/ril"
homepage = "https://github.com/jay3332/ril"
readme = "README.md"
keywords = ["ril", "imaging", "image", "processing", "editing"]
categories = ["encoding", "graphics", "multimedia", "visualization"]

[dependencies]
fast_image_resize = { version = "^1", optional = true }
png = { version = "^0.17", optional = true }
jpeg-decoder = { version = "^0.2", optional = true }
jpeg-encoder = { version = "^0.5", features = ["simd"], optional = true }
gif = { version = "^0.11", optional = true }
fontdue = { version = "^0.7", optional = true }

[features]
default = ["resize", "text"]
all = ["resize", "png", "jpeg", "gif", "text"]
jpeg = ["dep:jpeg-decoder", "dep:jpeg-encoder"]
resize = ["dep:fast_image_resize"]
text = ["dep:fontdue"]

[dev-dependencies]
criterion = "^0.3"
image = "^0"
imageproc = "^0.23"
rusttype = "^0.9"

[[bench]]
path = "benches/invert.rs"
name = "invert"
harness = false

[[bench]]
path = "benches/invert_comparison.rs"
name = "invert_comparison"
harness = false

[[bench]]
path = "benches/text_comparison.rs"
name = "text_comparison"
harness = false